[metadata]
name = jwstuser
version = 0.0.1
author = Jeff Valenti
author_email = valenti@stsci.edu
description = Tools for JWST users
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacetelescope/jwstuser
project_urls =
    Bug Tracker = https://github.com/spacetelescope/jwstuser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: AURA
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/jwstuser-engdb-timeseries

[options.entry_points]
console_scripts =

[options.packages.find]
where = src
